# knuthyao-importance

./: README.md  Tree.hs  Tree2.hs  Tree3.hs  TreeRec.hs
ky-backend/: Cargo.toml
ky-backend/benches/: benchmarks.rs
ky-backend/src/: lib.rs  lut.rs  main.rs
ky-backend/trees/: tree-weird  tree0.5,0.5  tree0.66,0.33
