[package]
name = "ky-backend"
version = "0.1.0"
authors = ["Gordon Stewart <gstew5@gmail.com>"]
edition = "2018"

[dependencies]
rand = "0.6.0"
sexp = "1.1.4"

[dev-dependencies]
criterion = "0.1.2"

[profile.dev]
opt-level = 0
debug = true
rpath = false
lto = false
debug-assertions = true
codegen-units = 16
panic = 'unwind'
incremental = true
overflow-checks = true

[profile.release]
opt-level = 3
debug = true
rpath = false
lto = false
debug-assertions = false
codegen-units = 1
panic = 'unwind'
incremental = false
overflow-checks = false

[[bench]]
name = "benchmarks"
harness = false